--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.10.3",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "slug": "^9.1.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
